<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_menu"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnHome"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:scaleType="centerCrop"
                        android:src="@drawable/home" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/home"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/btnNaturalNumbers"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:scaleType="centerCrop"
                        android:src="@drawable/numbers" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/numbers"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnMpTable"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@color/black"
                        android:scaleType="fitXY"
                        android:src="@drawable/mp_table" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/mp_tables"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnMathPractice"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@color/black"
                        android:scaleType="centerCrop"
                        android:src="@drawable/math" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/practice"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnLetters"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@color/black"
                        android:scaleType="centerCrop"
                        android:src="@drawable/letters" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/letters"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnLettersWithWords"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@color/black"
                        android:scaleType="fitXY"
                        android:src="@drawable/letters_for" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/words"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnWriteWords"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:background="@color/black"
                        android:scaleType="fitXY"
                        android:src="@drawable/write_words" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/write_words"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:background="@color/jerry" />

        <FrameLayout
            android:id="@+id/mainFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />


</androidx.drawerlayout.widget.DrawerLayout>