<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.PracticeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragment.PracticeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Practice"
            android:textColor="@color/jerry"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:hint="@string/first_number"
            android:inputType="number|text"
            android:padding="5dp" />

        <LinearLayout
            android:id="@+id/operationWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/plus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/add" />

            <ImageButton
                android:id="@+id/minus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/minus" />


            <ImageButton
                android:id="@+id/multiply"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/multi" />


            <ImageButton
                android:id="@+id/division"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/div" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/num2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:gravity="end"
                android:hint="@string/second_number"
                android:inputType="number|text"
                android:padding="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/equalTo"
                android:background="@color/jerry" />

            <TextView
                android:id="@+id/equalTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/view2"
                android:padding="5dp"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="35dp"
                android:layout_height="0.1dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:background="@color/jerry" />

        </RelativeLayout>

        <EditText
            android:id="@+id/userAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:hint="write answer"
            android:inputType="number|text"
            android:padding="5dp" />

        <Button
            android:id="@+id/checkAndShowAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:padding="12dp"
            android:text="check and Show Answer" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/correctAnswer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/showAnswer"
                android:text="@string/correct_answer"
                android:textColor="@color/jerry"
                android:textSize="19sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/showAnswer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>